# NDK_Day31_AS

./: .gitignore
app/: CMakeLists.txt  build.gradle
app/src/main/cpp/: cardocr.cpp  native-lib.cpp
app/src/main/java/com/darren/ocr/: BankCardOcr.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
